Correction de l'alignement horizontal des elements du carrousel en mobile

--- a/hiring-tests-main-HTML-CSS-exercice-html-exercice-integration/hiring-tests-main-HTML-CSS-exercice-html-exercice-integration/HTML-CSS/exercice-html/exercice-integration/scss/main.scss
+++ b/hiring-tests-main-HTML-CSS-exercice-html-exercice-integration/hiring-tests-main-HTML-CSS-exercice-html-exercice-integration/HTML-CSS/exercice-html/exercice-integration/scss/main.scss
@@ -277,6 +277,7 @@ a {
   &__viewport {
     overflow: hidden;
     width: 100%;
+    scroll-snap-type: x mandatory;
   }
 
   &__track {
@@ -285,11 +286,19 @@ a {
   }
 
   &__slide {
-    flex: 0 0 80%;
-    margin-right: 1rem;
+    flex: 0 0 100%;
+    margin-right: 0;
     border-radius: 12px;
     overflow: hidden;
     transition: transform 0.2s ease;
+    scroll-snap-align: start;
+    @media (min-width: 768px) {
+    .carousel__slide {
+        flex: 0 0 100%;
+        margin-right: 1rem;
+      }
+    }
+
 
     &:hover {
       transform: scale(1.03);
@@ -301,8 +310,8 @@ a {
 
     img {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: auto;
+      display: block;
 
       aspect-ratio: 16 / 9;
 
